Q:	Why do ducks have big flat feet? A:	To stamp out forest fires.
Q:	Why do elephants have big flat feet?
A:	To stamp out flaming ducks.

--- a/themis.conf
+++ b/themis.conf
@@ -14,4 +14,4 @@ themis_libs="/usr/local/lib/themis"
 themis_repos="${themis_home}/repositories"
 themis_packages="${themis_home}/packages"
 
-themis_lock="${themis_home}/themis.lck"
+themis_lock="${themis_temp}/themis.pid"
