--- a/themis.conf
+++ b/themis.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-version="1.1.0" # major(1).minor(1).patch(0)
+version="2.0.0"         # major(1).minor(1).patch(0)
 maintainer="lazypwny"
 license="GPL3"
 
@@ -8,10 +8,10 @@ setdir="${PWD}"
 user="${SUDO_USER:-$USER}"
 group=$(cat /etc/group | awk -F: '{ print $1}' | grep -w ${user} || echo "users")
 
-themis_temp="/tmp/themis"
-themis_home="/usr/share/themis"
-themis_libs="/usr/local/lib/themis"
-themis_repos="${themis_home}/repositories"
-themis_packages="${themis_home}/packages"
+themis_temp="/tmp/themis"                   # Directory
+themis_home="/usr/share/themis"             # Directory
+themis_libs="/usr/local/lib/themis"         # Directory
+themis_repos="${themis_home}/repositories"  # Directory
+themis_pkgs="${themis_home}/packages"       # Directory
 
-themis_lock="${themis_temp}/themis.pid"
+themis_lock="${themis_temp}/themis.pid"     # File
