dayı ben bu arkadaştan şikayetçiyim konuşma hakkını nerden buldu --leri

--- a/themis.conf
+++ b/themis.conf
@@ -1,10 +1,30 @@
 #!/bin/bash
 
-version="2.0.0"         # major(1).minor(1).patch(0)
-maintainer="lazypwny"
-license="GPL3"
+## Call Libraries
 
-setdir="${PWD}"
+getlib() {
+    if [[ -d ${themis_libs} ]] ; then
+        for M in $(seq 1 ${#}) ; do
+            if [[ -e ${themis_libs}/${@:M:1}.sh ]] ; then
+                source ${themis_libs}/${@:M:1}.sh
+            elif [[ -e ${themis_libs}/${@:M:1} ]] ; then
+                source ${themis_libs}/${@:M:1}
+            else
+                echo -e "\033[0;31mFatal: Library ${@:M:1}.sh Couldn't Sourced!\033[0m"
+                exit 1
+            fi
+        done
+    else
+        echo -e "\033[0;31mThe Library Directory Doesn't Exist! Please Reinstall the Tool.\033[0m"
+        exit 1
+    fi
+}
+
+version="2.0.0"         # major(1).minor(1).patch(0)
+maintainer="lazypwny"   # author
+license="GPL3"          # license
+
+setdir="${PWD}"         
 user="${SUDO_USER:-$USER}"
 group=$(cat /etc/group | awk -F: '{ print $1}' | grep -w ${user} || echo "users")
 
@@ -12,6 +32,6 @@ themis_temp="/tmp/themis"                   # Directory
 themis_home="/usr/share/themis"             # Directory
 themis_libs="/usr/local/lib/themis"         # Directory
 themis_repos="${themis_home}/repositories"  # Directory
-themis_pkgs="${themis_home}/packages"       # Directory
 
 themis_lock="${themis_temp}/themis.pid"     # File
+themis_db="${themis_home}/packages.db"      # File
